--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "discord.js": "^11.5.1",
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.2.0",
+    "jimp": "^0.8.5",
     "moment": "^2.24.0",
-    "mongodb": "^3.3.2",
-    "mongoose": "^5.7.3"
+    "mongodb": "^3.3.3",
+    "mongoose": "^5.7.5",
+    "request": "^2.88.0",
+    "tinycolor": "^0.0.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.19.4"
   }
 }
