--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "color-thief-jimp": "^2.0.2",
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
     "jimp": "^0.8.5",
